# smartscreen-firmware

./: .gitignore  .gitmodules  CMakeLists.txt  commit-hook.sh  sdkconfig  start-debugger.sh
components/mfl_display/: CMakeLists.txt
components/mfl_display/include/mfl/: Display.hpp
components/mfl_display/src/: Display.cpp
components/mfl_esp_httpd/: CMakeLists.txt
components/mfl_esp_httpd/include/mfl/: EspHttpd.hpp
components/mfl_esp_httpd/include/mfl/esp_httpd/: Defaults.hpp
components/mfl_esp_httpd/src/: EspHttpd.cpp
components/mfl_helpers/: CMakeLists.txt
components/mfl_helpers/include/mfl/helpers/: Defer.hpp  macros.hpp
components/mfl_http/: CMakeLists.txt
components/mfl_http/include/mfl/http/: Method.hpp
components/mfl_http/include/mfl/httpd/: Context.hpp  PathNode.hpp  Response.hpp  Router.hpp
components/mfl_http/src/: PathNode.cpp  Router.cpp
components/mfl_http_client/: CMakeLists.txt
components/mfl_http_client/include/mfl/http/: Client.hpp
components/mfl_http_client/src/: Client.cpp
components/mfl_httpd/: CMakeLists.txt
components/mfl_httpd/include/mfl/: Httpd.hpp
components/mfl_httpd/include/mfl/httpd/: Context.hpp  Defaults.hpp  Errors.hpp  Handler.hpp  (+5 more)
components/mfl_httpd/src/: Httpd.cpp  PathNode.cpp  Router.cpp  helpers.cpp  helpers.hpp
components/mfl_wifi/: CMakeLists.txt
components/mfl_wifi/include/mfl/: Wifi.hpp
components/mfl_wifi/src/: Wifi.cpp
libs/modern_json/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig  smartscreen.cpp
main/src/: MainView.cpp  MainView.hpp  funcs.cpp  smartscreen.cpp  tojson.hpp
(+2 files in other folders)
